--- a/Configs/mnist3d.conf
+++ b/Configs/mnist3d.conf
@@ -5,14 +5,14 @@
 
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
 
-	net.layers{end+1}.properties = struct('type',2,'numFm',7  ,'kernel',5,'pad',2, 'stride', [2 2 2]);
-	net.layers{end+1}.properties = struct('type',2,'numFm',17 ,'kernel',7);
-	net.layers{end+1}.properties = struct('type',1,'numFm',127);
+	net.layers{end+1}.properties = struct('type',2,'numFm',7  , 'Activation',@Relu, 'dActivation',@dRelu,'kernel',5,'pad',2, 'stride', [2 2 4], 'pooling', [1 1 1]);
+	net.layers{end+1}.properties = struct('type',2,'numFm',17 , 'kernel',[5 5 3]  ,'pad',[1 1 0], 'pooling', [1 1 1]);
+	net.layers{end+1}.properties = struct('type',1,'numFm',128);
 	net.layers{end+1}.properties = struct('type',1,'numFm',10);
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
-	net.hyperParam.trainLoopCount = 200;		%on how many images to train before evaluating the network
+	net.hyperParam.trainLoopCount = 500;		%on how many images to train before evaluating the network
 	net.hyperParam.testImageNum   = 1000;   	% after each loop, on how many images to evaluate network performance
 	net.hyperParam.ni_initial     = 0.05;		% ni to start training process
 	net.hyperParam.ni_final       = 0.00001;	% final ni to stop the training process
