add dropout for 3d net

--- a/Configs/mnist3d.conf
+++ b/Configs/mnist3d.conf
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
 
 	net.layers{end+1}.properties = struct('type',2,'numFm',7  , 'Activation',@Relu, 'dActivation',@dRelu,'kernel',5,'pad',2, 'stride', [2 2 4], 'pooling', [1 1 1]);
-	net.layers{end+1}.properties = struct('type',2,'numFm',17 , 'kernel',[5 5 3]  ,'pad',[1 1 0], 'pooling', [1 1 1]);
+	net.layers{end+1}.properties = struct('type',2,'numFm',17 , 'kernel',[5 5 3]  ,'pad',[1 1 0], 'pooling', [1 1 1], 'dropOut' ,0.8);
 	net.layers{end+1}.properties = struct('type',1,'numFm',128);
 	net.layers{end+1}.properties = struct('type',1,'numFm',10);
 
