--- a/Configs/mnist99.24.conf
+++ b/Configs/mnist99.24.conf
@@ -1,5 +1,5 @@
  %  reach 99.24% on MNIST. 
- %  Training finish after about 446 iteration , ~20 hours. time can be reduces with some tweaks
+ %  Training finish after about 446 iteration , (37 epocs) can be reduces with some tweaks
 
  %%%%%%%%%%%%%%%%%%%%%  input settings  %%%%%%%%%%%%%%%%%%
  
