add support for softmax layer (type=0)

--- a/Configs/mnist.conf
+++ b/Configs/mnist.conf
@@ -9,6 +9,7 @@
  	net.layers{end+1}.properties = struct('type',2,'numFm',24 ,'kernel',13);
  	net.layers{end+1}.properties = struct('type',1,'numFm',128);
  	net.layers{end+1}.properties = struct('type',1,'numFm',10);
+ %	net.layers{end+1}.properties = struct('type',0,'numFm',10); %softmax
  
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
