--- a/Configs/1d.conf
+++ b/Configs/1d.conf
@@ -1,14 +1,12 @@
- %%%%%%%%%%%%%%%%%%%%%  input settings  %%%%%%%%%%%%%%%%%%
- 
- 	net.hyperParam.sizeFmInput = [24]; 	% 10 const bits , 4 label encode and 10 random 
- 	net.hyperParam.numFmInput  = 1;        	% number of feature map of the input
- 
+
  %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
  
+ 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[24],'numFm',1 );         %inputLayer
 
- 	net.layers{end+1}.properties = struct('type',1,'numFm',128);
- 	net.layers{end+1}.properties = struct('type',1,'numFm',16);
- 
+ 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',128);
+ 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',16);
+  	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
  	net.hyperParam.trainLoopCount = 8000;		%on how many images to train before evaluating the network
