--- a/Configs/cifar10.conf
+++ b/Configs/cifar10.conf
@@ -1,15 +1,12 @@
-%%%%%%%%%%%%%%%%%%%%%  input settings  %%%%%%%%%%%%%%%%%%
-
-	net.hyperParam.sizeFmInput = [32 32]; 	% size of input feature map
-	net.hyperParam.numFmInput  = 3;        	% number of feature map of the input
-
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
+ 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
 
-	net.layers{end+1}.properties = struct('type',2, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'stride',2);
-	net.layers{end+1}.properties = struct('type',2, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pad',1, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',2, 'numFm',96 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',2, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',1, 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',1, 'numFm',10);
+	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'stride',2);
+	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pad',1, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',96 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',2, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type',net.types.fc, 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type',net.types.fc, 'numFm',10);
+ 	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
@@ -18,11 +15,8 @@
 	net.hyperParam.ni_initial     = 0.0001;	        % ni to start training process
 	net.hyperParam.ni_final       = 0.000001;	% final ni to stop the training process
 	net.hyperParam.momentum       = 0.9;
-        net.hyperParam.lambda         = 0.008; 		% L2 regularization factor
+    net.hyperParam.lambda         = 0.008; 		% L2 regularization factor
 	net.hyperParam.flipImage      = 1;              % randomly flip the input hor/vert before passing to the network. Improves learning in some instances
 	net.runInfoParam.verifyBP     = 0;       
-	
-
-
 
 
