--- a/Configs/cifar10_fast.conf
+++ b/Configs/cifar10_fast.conf
@@ -1,14 +1,11 @@
-%%%%%%%%%%%%%%%%%%%%%  input settings  %%%%%%%%%%%%%%%%%%
-
-	net.hyperParam.sizeFmInput = [32 32]; 	% size of input feature map
-	net.hyperParam.numFmInput  = 3;        	% number of feature map of the input
-
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
-
+ 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
 	net.layers{end+1}.properties = struct('type',2, 'numFm',16 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pooling',2);
 	net.layers{end+1}.properties = struct('type',2, 'numFm',32 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',1, 'dropOut',0.8);
 	net.layers{end+1}.properties = struct('type',1, 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
 	net.layers{end+1}.properties = struct('type',1, 'numFm',10);
+ 	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+	
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
