--- a/Configs/mnist99.24.conf
+++ b/Configs/mnist99.24.conf
@@ -2,16 +2,13 @@
  %  Training finish after about 446 iteration , (37 epocs) can be reduces with some tweaks
 
  %%%%%%%%%%%%%%%%%%%%%  input settings  %%%%%%%%%%%%%%%%%%
- 
- 	net.hyperParam.sizeFmInput = [28 28]; 	% size of input feature map
- 	net.hyperParam.numFmInput  = 1;        	% number of feature map of the input
- 
- %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
- 
+  	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[28 28],'numFm',1 );         %inputLayer
  	net.layers{end+1}.properties = struct('type',2,'numFm',7  ,'kernel',5,'pad',2);
  	net.layers{end+1}.properties = struct('type',2,'numFm',17 ,'kernel',13);
  	net.layers{end+1}.properties = struct('type',1,'numFm',127);
  	net.layers{end+1}.properties = struct('type',1,'numFm',10);
+	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+
  
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
