change layer type to a string
change layer type to a string

--- a/Configs/1d_conv.conf
+++ b/Configs/1d_conv.conf
@@ -1,12 +1,12 @@
 
  %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
  
- 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[24],'numFm',1 );         %inputLayer
+ 	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[24],'numFm',1 );         %inputLayer
 
- 	net.layers{end+1}.properties = struct('type',net.types.conv,'numFm',12,'kernel',5);
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',128);
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',16);
-  	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@MSE,'costFunc',@MSE_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','conv','numFm',12,'kernel',5);
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',128);
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',16);
+  	net.layers{end+1}.properties = struct('type','regression','lossFunc',@MSE,'costFunc',@MSE_Cost);     %regression Layer
  
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
