--- a/Configs/mnist.conf
+++ b/Configs/mnist.conf
@@ -1,13 +1,13 @@
  %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
  
- 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[28 28],'numFm',1 );         %inputLayer
-	net.layers{end+1}.properties = struct('type',net.types.conv,'numFm',12  ,'kernel',5,'pad',2);
- 	net.layers{end+1}.properties = struct('type',net.types.conv,'numFm',24 ,'kernel',13);
-  %	net.layers{end+1}.properties = struct('type',net.types.batchNorm);
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',128);
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',10);
-  %	net.layers{end+1}.properties = struct('type',net.types.softmax);
-	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[28 28],'numFm',1 );         %inputLayer
+	net.layers{end+1}.properties = struct('type','conv','numFm',12  ,'kernel',5,'pad',2);
+ 	net.layers{end+1}.properties = struct('type','conv','numFm',24 ,'kernel',13);
+  %	net.layers{end+1}.properties = struct('type','batchNorm');
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',128);
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',10);
+  %	net.layers{end+1}.properties = struct('type','softmax');
+	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
  
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
