--- a/Configs/1d.conf
+++ b/Configs/1d.conf
@@ -1,11 +1,10 @@
 
  %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
  
- 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[24],'numFm',1 );         %inputLayer
-
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',128);
- 	net.layers{end+1}.properties = struct('type',net.types.fc,'numFm',16);
-  	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[24],'numFm',1 );         %inputLayer
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',128);
+ 	net.layers{end+1}.properties = struct('type','fc','numFm',16);
+  	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
 
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
