--- a/Configs/cifar10.conf
+++ b/Configs/cifar10.conf
@@ -1,12 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
- 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
-
-	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'stride',2);
-	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pad',1, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',net.types.conv, 'numFm',96 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',2, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',net.types.fc, 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',net.types.fc, 'numFm',10);
- 	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
+	net.layers{end+1}.properties = struct('type','conv', 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'stride',2);
+	net.layers{end+1}.properties = struct('type','conv', 'numFm',48 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pad',1, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type','conv', 'numFm',96 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',2, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type','fc', 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type','fc', 'numFm',10);
+ 	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
