--- a/Configs/cifar10_fast.conf
+++ b/Configs/cifar10_fast.conf
@@ -1,10 +1,10 @@
 %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
- 	net.layers{end+1}.properties = struct('type',net.types.input, 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
-	net.layers{end+1}.properties = struct('type',2, 'numFm',16 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pooling',2);
-	net.layers{end+1}.properties = struct('type',2, 'numFm',32 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',1, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',1, 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
-	net.layers{end+1}.properties = struct('type',1, 'numFm',10);
- 	net.layers{end+1}.properties = struct('type',net.types.regression,'lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[32 32],'numFm',3 );         %inputLayer
+	net.layers{end+1}.properties = struct('type','conv', 'numFm',16 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',5, 'pooling',2);
+	net.layers{end+1}.properties = struct('type','conv', 'numFm',32 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',1, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type','fc', 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
+	net.layers{end+1}.properties = struct('type','fc', 'numFm',10);
+ 	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
 	
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
