batch norm corrections - change to gamma & beta per channel

--- a/Configs/mnist.conf
+++ b/Configs/mnist.conf
@@ -17,5 +17,5 @@
  	net.hyperParam.ni_final       = 0.025;	        % final ni to stop the training process
 
     net.runInfoParam.verifyBP     = 1; 
-    net.runInfoParam.batchNum     = 1;
+    net.hyperParam.batchNum       = 1;
     net.hyperParam.randomizeTrainingSamples = 0;
