--- a/Configs/mnist3d.conf
+++ b/Configs/mnist3d.conf
@@ -2,19 +2,20 @@
 
  	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[28 28 28],'numFm',1 );         %inputLayer
 	net.layers{end+1}.properties = struct('type','conv','numFm',7  , 'Activation',@Relu, 'dActivation',@dRelu,'kernel',5,'pad',2, 'stride', [2 2 4], 'pooling', [1 1 1]);
+%	net.layers{end+1}.properties = struct('type','batchNorm', 'initGamma',1, 'initBeta',0, 'alpha' , 2^-5 );
 	net.layers{end+1}.properties = struct('type','conv','numFm',17 , 'kernel',[5 5 3]  ,'pad',[1 1 0], 'pooling', [1 1 1], 'dropOut' ,0.8);
-	net.layers{end+1}.properties = struct('type','batchNorm','gamma',1,'beta',0);
+	net.layers{end+1}.properties = struct('type','batchNorm'); % using defaults
 	net.layers{end+1}.properties = struct('type','fc','numFm',128);
 	net.layers{end+1}.properties = struct('type','fc','numFm',10);
-	net.layers{end+1}.properties = struct('type','softmax');
+%   net.layers{end+1}.properties = struct('type','softmax');
  	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
-	net.hyperParam.trainLoopCount = 200;		%on how many images to train before evaluating the network
-	net.hyperParam.testImageNum   = 400;   	% after each loop, on how many images to evaluate network performance
+	net.hyperParam.trainLoopCount = 500;		%on how many images to train before evaluating the network
+	net.hyperParam.testImageNum   = 300;   	    % after each loop, on how many images to evaluate network performance
 	net.hyperParam.ni_initial     = 0.1;		% ni to start training process
 	net.hyperParam.ni_final       = 0.0001;	% final ni to stop the training process
-    net.runInfoParam.verifyBP     = 0; 
+    net.runInfoParam.verifyBP     = 1; 
 
     net.hyperParam.batchNum=10;
