regression updates - add autoEncoder demo
- modify network to support regression and classification
- add 'reshape' layer
- add autoEnc demo

--- a/Configs/mnist3d.conf
+++ b/Configs/mnist3d.conf
@@ -8,7 +8,7 @@
 	net.layers{end+1}.properties = struct('type','fc','numFm',128);
 	net.layers{end+1}.properties = struct('type','fc','numFm',10);
 %   net.layers{end+1}.properties = struct('type','softmax');
- 	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer - classification
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
 
