--- a/Configs/mnist99.24.conf
+++ b/Configs/mnist99.24.conf
@@ -7,7 +7,7 @@
  	net.layers{end+1}.properties = struct('type','conv','numFm',17 ,'kernel',13);
  	net.layers{end+1}.properties = struct('type','fc','numFm',127);
  	net.layers{end+1}.properties = struct('type','fc','numFm',10);
-	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer
 
  
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
