--- a/Configs/1d.conf
+++ b/Configs/1d.conf
@@ -4,7 +4,7 @@
  	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[24],'numFm',1 );         %inputLayer
  	net.layers{end+1}.properties = struct('type','fc','numFm',128);
  	net.layers{end+1}.properties = struct('type','fc','numFm',16);
-  	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+  	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer - classification
 
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
