--- a/Configs/1d_conv.conf
+++ b/Configs/1d_conv.conf
@@ -6,8 +6,8 @@
  	net.layers{end+1}.properties = struct('type','conv','numFm',12,'kernel',5);
  	net.layers{end+1}.properties = struct('type','fc','numFm',128);
  	net.layers{end+1}.properties = struct('type','fc','numFm',16);
-  	net.layers{end+1}.properties = struct('type','regression','lossFunc',@MSE,'costFunc',@MSE_Cost);     %regression Layer
- 
+  	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer - classification 
+	
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
  	net.hyperParam.trainLoopCount = 8000;		%on how many images to train before evaluating the network
