--- a/Configs/cifar10_fast.conf
+++ b/Configs/cifar10_fast.conf
@@ -4,7 +4,7 @@
 	net.layers{end+1}.properties = struct('type','conv', 'numFm',32 , 'Activation',@Relu, 'dActivation',@dRelu, 'kernel',7, 'pad',1, 'dropOut',0.8);
 	net.layers{end+1}.properties = struct('type','fc', 'numFm',128, 'Activation',@Relu, 'dActivation',@dRelu, 'dropOut',0.8);
 	net.layers{end+1}.properties = struct('type','fc', 'numFm',10);
- 	net.layers{end+1}.properties = struct('type','regression','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %regression Layer
+ 	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer
 	
 
 %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
