--- a/Configs/autoEnc.conf
+++ b/Configs/autoEnc.conf
@@ -1,9 +1,12 @@
  %%%%%%%%%%%%%%%%%%%%%  Layers specification %%%%%%%%%%%%%%%%%%
  
+    %encoder
  	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[28 28],'numFm',1 );         %inputLayer
 	net.layers{end+1}.properties = struct('type','conv','numFm',12  ,'kernel',5,'pad',2);
     net.layers{end+1}.properties = struct('type','batchNorm','alpha',2^-6);
  	net.layers{end+1}.properties = struct('type','fc','numFm',10);
+	
+	%decoder
     net.layers{end+1}.properties = struct('type','fc','numFm',7*7);
     net.layers{end+1}.properties = struct('type','reshape', 'sizeFm' ,[7 7],'numFm',1);
 	net.layers{end+1}.properties = struct('type','conv','numFm',12  ,'kernel',3,'pad',2);
