update net parmeters

--- a/Configs/1d.conf
+++ b/Configs/1d.conf
@@ -4,11 +4,12 @@
  	net.layers{end+1}.properties = struct('type','input', 'sizeFm' ,[24],'numFm',1 );         %inputLayer
  	net.layers{end+1}.properties = struct('type','fc','numFm',128);
  	net.layers{end+1}.properties = struct('type','fc','numFm',16);
+ 	net.layers{end+1}.properties = struct('type','softmax');
   	net.layers{end+1}.properties = struct('type','output','lossFunc',@CrossEnt,'costFunc',@CrossEnt_Cost);     %output Layer - classification
 
  %%%%%%%%%%%%%%%%%%%%%  Hyper params - training %%%%%%%%%%%%%%%%%%
  
- 	net.hyperParam.trainLoopCount = 8000;		%on how many images to train before evaluating the network
+ 	net.hyperParam.trainLoopCount = 4000;		%on how many images to train before evaluating the network
  	net.hyperParam.testImageNum   = 400;   	% after each loop, on how many images to evaluate network performance
  	net.hyperParam.ni_initial     = 0.001;		% ni to start training process
     net.hyperParam.momentum       = 0.9;
