--- a/Configs/mnist3d.conf
+++ b/Configs/mnist3d.conf
@@ -18,5 +18,6 @@
 	net.hyperParam.ni_final       = 0.0001;	    % final ni to stop the training process
     net.runInfoParam.verifyBP     = 1;
 	net.hyperParam.noImprovementTh= 8;          % after how many iterations with no loss improvment to update ni
+	net.hyperParam.normalizeNetworkInput = 1;   % will normalize every samples with mean 0, var=1 before passing to net
 
     net.hyperParam.batchNum=10;
